--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 <div class="container signin">
 <p>Already have an account? <a href="#">Sign in</a>.</p>
 </div>
+<input type="file" name="auzamure">
 </form>
+<h1>THANKS</H1>
 </body>
 </html>
