--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 <h2>attach your file here</h2><br>
   <input type="file" id="myfile" name="myfile"><br>
   <h4>choose country</h4>
+   <input list="country" >
+<datalist id="country">
+<option>RWANDA
+<option>BURUNDI
+<option>KENYA
+<option>UGANDA
+<option>TANZANIA
+<option>SOUTH SUDAN
+</datalist><br>
   <input type="submit" value="submit">
 <input type="reset" value="ignore">
 </form>
