--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 </div>
 <input type="file" name="auzamure">
 </form>
-<h1>THANKS</H1>
+<h1>THANKS</H1><h1>THANKS</H1><h1>THANKS</H1><h1>THANKS</H1><h1>THANKS</H1><h1>THANKS</H1><h1>THANKS</H1>
 </body>
 </html>
