--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 <hr>
 <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
 <button type="submit" class="registerbtn"><strong>Register</strong></button>
+  <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+<button type="submit" class="registerbtn"><strong>Register</strong></button
+  <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+<button type="submit" class="registerbtn"><strong>Register</strong></button
 </div>
 <div class="container signin">
 <p>Already have an account? <a href="#">Sign in</a>.</p>
